fix 1px gap in underlining after annotation

--- a/assets/scss/partials/_annotations.scss
+++ b/assets/scss/partials/_annotations.scss
@@ -103,9 +103,11 @@
       display: inline-block;
       position: absolute;
       content: ' ';
-      width: 100%;
+      //width: 100%;
       cursor: pointer;
       height: 4px;
+      left: -1px;
+      right: -1px;
     }
 
     &.annotation-start::before {
